--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.900.2",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "firebase": "^7.8.1",
     "firebase-tools": "^7.12.1",
     "global": "^4.4.0",
